adjusted buttons color and text color

--- a/app/src/main/res/layout/activity_generate_pdf.xml
+++ b/app/src/main/res/layout/activity_generate_pdf.xml
@@ -37,6 +37,9 @@
         android:layout_centerInParent="true"
         android:fontFamily="@font/open_sans"
         android:onClick="sendEmail"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:backgroundTint="@color/newButtonGray"
         android:text="share PDF" />
 
 </RelativeLayout>
