--- a/app/src/main/res/layout/activity_handbook_practices.xml
+++ b/app/src/main/res/layout/activity_handbook_practices.xml
@@ -43,6 +43,9 @@
                         android:layout_marginBottom="16dp"
                         android:text="Go Back"
                         android:onClick="goback"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
