--- a/app/src/main/res/layout/activity_profile_vehicle.xml
+++ b/app/src/main/res/layout/activity_profile_vehicle.xml
@@ -216,6 +216,9 @@
                         android:fontFamily="@font/open_sans"
                         android:onClick="edit_profile"
                         android:text="Edit Profile"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/typeEdit" />
 
@@ -228,6 +231,9 @@
                         android:fontFamily="@font/open_sans"
                         android:onClick="edit_Insurance"
                         android:text="Edit Insurance"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toEndOf="@id/accessProfile"
@@ -240,6 +246,9 @@
                         android:fontFamily="@font/open_sans"
                         android:onClick="save"
                         android:text="Save"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
