--- a/app/src/main/res/layout/activity_final_check.xml
+++ b/app/src/main/res/layout/activity_final_check.xml
@@ -386,6 +386,9 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginLeft="50dp"
                         android:layout_marginTop="50dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         android:fontFamily="@font/open_sans"
                         android:text="Finish" />
 
