--- a/app/src/main/res/layout/activity_handbook.xml
+++ b/app/src/main/res/layout/activity_handbook.xml
@@ -36,35 +36,6 @@
                     tools:layout_editor_absoluteY="0dp">
 
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/card_view5"
-                        android:layout_width="170dp"
-                        android:layout_height="130dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="192dp"
-                        android:layout_marginEnd="20dp"
-                        app:cardCornerRadius="20dp"
-                        android:onClick="GoPrevention"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:strokeColor="@color/teal_700"
-                        app:strokeWidth="3dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/carprevention">
-
-                            <TextView
-                                android:id="@+id/textView32"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="23dp"
-                                android:layout_weight="1"
-                                android:text="Accident Prevention" />
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
@@ -93,15 +64,115 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <Button
+                        android:id="@+id/button5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="160dp"
+                        android:layout_marginTop="528dp"
+                        android:layout_marginBottom="324dp"
+                        android:backgroundTint="@color/newButtonGray"
+                        android:onClick="Backtohome"
+                        android:text="Go Back"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0" />
+
+                    <Button
+                        android:id="@+id/button7"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="448dp"
+                        android:layout_marginEnd="211dp"
+                        android:backgroundTint="@color/newButtonGray"
+                        android:text="Insurance"
+                        android:onClick="GoInsurance"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/button8"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="448dp"
+                        android:layout_marginEnd="27dp"
+                        android:backgroundTint="@color/newButtonGray"
+                        android:onClick="GoSafety"
+                        android:text="Safety"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/button9"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="248dp"
+                        android:layout_marginEnd="211dp"
+                        android:backgroundTint="@color/newButtonGray"
+                        android:onClick="GoPractices"
+                        android:text="Practices"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/button10"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="248dp"
+                        android:layout_marginEnd="27dp"
+                        android:backgroundTint="@color/newButtonGray"
+                        android:onClick="GoPrevention"
+                        android:text="Prevention"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/card_view8"
+                        android:layout_width="170dp"
+                        android:layout_height="130dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="308dp"
+                        android:layout_marginEnd="20dp"
+                        app:cardCornerRadius="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:strokeColor="@color/teal_700"
+                        app:strokeWidth="3dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/car">
+
+                            <TextView
+                                android:id="@+id/textView34"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="45dp"
+                                android:layout_weight="1"
+                                android:text="Safety Tips" />
+                        </LinearLayout>
+                    </com.google.android.material.card.MaterialCardView>
+
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_view9"
                         android:layout_width="170dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="336dp"
-                        android:layout_marginEnd="208dp"
+                        android:layout_marginTop="308dp"
+                        android:layout_marginEnd="204dp"
                         app:cardCornerRadius="20dp"
-                        android:onClick="GoInsurance"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:strokeColor="@color/teal_700"
@@ -127,9 +198,8 @@
                         android:layout_width="170dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="192dp"
-                        android:layout_marginEnd="208dp"
-                        android:onClick="GoSafety"
+                        android:layout_marginTop="108dp"
+                        android:layout_marginEnd="204dp"
                         app:cardCornerRadius="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -145,20 +215,19 @@
                                 android:id="@+id/textView19"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:layout_marginStart="40dp"
+                                android:layout_weight="1"
                                 android:text="Best Practices" />
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/card_view8"
+                        android:id="@+id/card_view5"
                         android:layout_width="170dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="336dp"
+                        android:layout_marginTop="108dp"
                         android:layout_marginEnd="20dp"
-                        android:onClick="GoPractices"
                         app:cardCornerRadius="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -168,31 +237,17 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/car">
+                            android:background="@drawable/carprevention">
 
                             <TextView
-                                android:id="@+id/textView34"
+                                android:id="@+id/textView32"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="45dp"
+                                android:layout_marginStart="23dp"
                                 android:layout_weight="1"
-                                android:text="Safety Tips" />
+                                android:text="Accident Prevention" />
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="160dp"
-                        android:layout_marginTop="528dp"
-                        android:layout_marginBottom="324dp"
-                        android:onClick="Backtohome"
-                        android:text="Go Back"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
