--- a/app/src/main/res/layout/activity_handbook_prevention.xml
+++ b/app/src/main/res/layout/activity_handbook_prevention.xml
@@ -93,6 +93,9 @@
                         android:layout_marginTop="783dp"
                         android:text="Go Back"
                         android:onClick="goback"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
