--- a/app/src/main/res/layout/activity_insurance_registration.xml
+++ b/app/src/main/res/layout/activity_insurance_registration.xml
@@ -110,6 +110,9 @@
                         android:layout_marginEnd="116dp"
                         android:fontFamily="@font/open_sans"
                         android:text=" NEXT"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
