--- a/app/src/main/res/layout/activity_profile_insurance.xml
+++ b/app/src/main/res/layout/activity_profile_insurance.xml
@@ -143,6 +143,7 @@
                 android:layout_marginTop="44dp"
                 android:onClick="edit_profile"
                 android:text="Edit Profile"
+
                 android:fontFamily="@font/open_sans"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accHolderEdit" />
@@ -182,8 +183,7 @@
         android:layout_gravity="start"
         android:background="@android:color/white">
 
-        <include
-            layout="@layout/main_nav_drawer"/>
+        <include layout="@layout/main_nav_drawer" />
 
 
     </RelativeLayout>
