--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -226,9 +226,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="45dp"
                         android:layout_marginTop="40dp"
-                        android:backgroundTint="@color/logo"
                         android:onClick="edit_vehicle"
                         android:text="Edit Vehicles"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         android:fontFamily="@font/open_sans"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/iceContactEdit" />
@@ -240,7 +242,9 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="40dp"
                         android:layout_marginEnd="45dp"
-                        android:backgroundTint="@color/logo"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         android:onClick="edit_insurance"
                         android:text="Edit Insurance"
                         android:fontFamily="@font/open_sans"
@@ -257,6 +261,9 @@
                         android:onClick="save"
                         android:text="Save"
                         android:textSize="18dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/newButtonGray"
                         android:fontFamily="@font/open_sans"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
