--- a/app/src/main/res/layout/activity_registering.xml
+++ b/app/src/main/res/layout/activity_registering.xml
@@ -25,6 +25,9 @@
             android:layout_marginEnd="152dp"
             android:fontFamily="@font/open_sans"
             android:text="@string/register"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:backgroundTint="@color/newButtonGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
