--- a/app/src/main/res/layout/custom_dialog2.xml
+++ b/app/src/main/res/layout/custom_dialog2.xml
@@ -31,6 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/open_sans"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:backgroundTint="@color/newButtonGray"
         android:text="Save Address"
         android:onClick="saveAddressFromManualEntry"/>
 
@@ -39,6 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:backgroundTint="@color/newButtonGray"
         android:fontFamily="@font/open_sans"
         android:text="Don't enter manually"
         android:onClick="goBack"/>
