--- a/app/src/main/res/layout/email_dialog.xml
+++ b/app/src/main/res/layout/email_dialog.xml
@@ -47,6 +47,9 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:backgroundTint="@color/newButtonGray"
             android:fontFamily="@font/open_sans"
             android:text="Send" />
 
@@ -57,6 +60,9 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="3dp"
             android:fontFamily="@font/open_sans"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:backgroundTint="@color/newButtonGray"
             android:text="Attach a file"
             android:translationY="5sp" />
     </RelativeLayout>
