--- a/app/src/main/res/layout/step1.xml
+++ b/app/src/main/res/layout/step1.xml
@@ -55,9 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="55dp"
-                android:backgroundTint="@color/logo"
                 android:fontFamily="@font/open_sans"
                 android:text="Call 911"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/instr2" />
@@ -67,7 +69,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="55dp"
-                android:backgroundTint="@color/logo"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:fontFamily="@font/open_sans"
                 android:text="Emergency\nContact"
                 app:layout_constraintLeft_toLeftOf="parent"
