--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -357,6 +357,9 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="50dp"
                 android:text=" NEXT"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:layout_centerHorizontal="true"/>
 
 
