--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,10 +40,11 @@
                 android:layout_height="60dp"
 
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
                 android:text="Report Accident(Step-By-Step)"
                 android:layout_marginTop="80dp"
-
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:onClick="onClick"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -54,8 +55,10 @@
                 android:layout_width="250dp"
                 android:layout_height="60dp"
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
                 android:layout_marginTop="25dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:text="Information Exchange"
                 android:onClick="onClick"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -68,27 +71,14 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
                 android:onClick="onClick"
                 android:text="Handbook"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/info_exchange" />
-
-            <Button
-                android:id="@+id/reports"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="25dp"
-                android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
-                android:onClick="onClick"
-
-                android:text="View Reports"
-
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/handbook" />
 
             <com.google.android.gms.ads.AdView
                 xmlns:ads="http://schemas.android.com/apk/res-auto"
