--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,9 @@
                 android:layout_marginStart="154dp"
                 android:layout_marginTop="340dp"
                 android:layout_marginEnd="152dp"
-                android:backgroundTint="#18ffff"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:fontFamily="@font/open_sans"
                 android:text="@string/sign_in"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -110,8 +112,10 @@
                 android:layout_marginStart="154dp"
                 android:layout_marginTop="500dp"
                 android:layout_marginEnd="152dp"
-                android:backgroundTint="#18ffff"
                 android:fontFamily="@font/open_sans"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:onClick="Complete"
                 android:text="Register"
                 app:layout_constraintEnd_toEndOf="parent"
