--- a/app/src/main/res/layout/activity_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_vehicle_details.xml
@@ -215,6 +215,9 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:backgroundTint="@color/newButtonGray"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/open_sans"
