Updated button color

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -61,6 +61,8 @@
                     android:layout_marginBottom="107dp"
                     android:fontFamily="@font/open_sans"
                     android:text="Gallery"
+                    android:textColor="@color/black"
+                    android:backgroundTint="@color/newButtonGray"
                     app:layout_constraintBottom_toTopOf="@id/imageView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.988"
@@ -76,6 +78,8 @@
                     android:layout_marginBottom="107dp"
                     android:fontFamily="@font/open_sans"
                     android:text="Camera"
+                    android:textColor="@color/black"
+                    android:backgroundTint="@color/newButtonGray"
                     app:layout_constraintBottom_toTopOf="@id/imageView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -86,6 +90,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:text="Upload to Database"
+                    android:textColor="@color/black"
+                    android:backgroundTint="@color/newButtonGray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +104,8 @@
                     android:layout_marginTop="50dp"
                     android:text="Finish"
                     android:onClick="finish"
+                    android:textColor="@color/black"
+                    android:backgroundTint="@color/newButtonGray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
