Updated button color

--- a/app/src/main/res/layout/activity_generate_pdf.xml
+++ b/app/src/main/res/layout/activity_generate_pdf.xml
@@ -25,6 +25,9 @@
         android:id="@+id/idBtnGeneratePDF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:backgroundTint="@color/newButtonGray"
         android:layout_centerInParent="true"
         android:fontFamily="@font/open_sans"
         android:text="Generate PDF" />
